--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semana08 02</title>
+    <title>Semana08-02</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    
+    <p>Transiciones CSS</p>
+
+    <div class="transiciones">
+    </div>
+
+    <p>Animaciones CSS</p>
+
+    <div class="animaciones"></div>
+
+    <p>Transformaciones CSS</p>
+
+    <div class="transformaciones"></div>
 </body>
 </html>
